# LaptopAnalyzer

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
database/: Dockerfile
fastApi/: Dockerfile  alembic.ini  database.py  main.py  pyproject.toml
fastApi/auxilary_function/: format_appeal_response.py  model_connecter.py  save_files.py
fastApi/auxilary_function/document_forming/: core.py  template.docx  №149417_от_2024-10-13.docx  №173320_от_2024-10-13.docx  №229153_от_2024-10-13.docx  №301546_от_2024-10-13.docx  №588042_от_2024-10-13.docx  №835970_от_2024-10-13.docx  №None_от_2024-10-13.docx
fastApi/database/database_alembic/versions/: 3748925a5363_initial_migration.py
fastApi/database_alembic/: env.py
fastApi/machine_learning/: inference.py
fastApi/services/appeal_operations/: models.py  router.py  schemas.py
fastApi/services/appeal_operations/utils/document_forming/: core.py  ~$mplate.docx
frontend/: .env.development  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  icons.js
frontend/src/components/: HeaderTimeAndDate.vue  Rectangle.vue  Sidebar.vue  SidebarCategory.vue
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/views/: Dashboard.vue  History.vue  HistoryItem.vue  HomePage.vue  Training.vue
notebooks/: .gitignore
